# ModbusSlave

./: .editorconfig  CMakeLists.txt  README.md  astyle.conf  main.c
.github/workflows/: c.yml
src/: checksum.c  checksum.h  config.c  config.h  frame.c  frame.h  frame_conversion.c  frame_conversion.h  modbus.c  modbus.h  register.c  register.h
test/: all_test.c  all_test.h  checksum_test.c  checksum_test.h  frame_conversion_test.c  frame_conversion_test.h  frame_test.c  frame_test.h  modbus_test.c  modbus_test.h
